# iac-demo

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ec2-deployment.yml  ec2-termination.yml  ecs-deployment.yml  ecs-termination.yml  push-to-ecr.yml
1-ec2-simple/: main.tf
2-ec2-s3-state/: main.tf
3-ecs-deployment/: main.tf
4-load-balancer/: main.tf
src/bye_app/: bye_main.py
src/hello_app/: hello_main.py
tests/: test_bye_app.py  test_hello_app.py
